# LidarMVP

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  NEXT_STEPS.md  README.md  conanfile.txt  lidar_manager_spec_v2.md  project_status.md  spec-simul-lidar.md
cmake/: DetectPlatform.cmake
include/: LidarAcquisition.hpp  OusterDriverEnhanced.hpp  PointTypes.hpp
simulator/: CMakeLists.txt  QUICK_REFERENCE.md  README.md  USER_GUIDE.md  build.sh
simulator/examples/: CMakeLists.txt  demo.sh  mock_pcap_generator.cpp  test_automation.sh  udp_listener.cpp
simulator/include/: cli_parser.hpp  config.hpp  metrics_logger.hpp  packet.hpp  packet_classifier.hpp  packet_scheduler.hpp  pcap_reader.hpp  sender_udp.hpp  sensor_info.hpp
simulator/src/: cli_parser.cpp  main.cpp  metrics_logger.cpp  packet_classifier.cpp  packet_scheduler.cpp  pcap_reader.cpp  sender_udp.cpp  sensor_info.cpp
simulator/tests/: CMakeLists.txt
src/: CMakeLists.txt  LidarAcquisition.cpp  OusterDriverEnhanced.cpp  PointTypes.cpp  main.cpp
tests/: CMakeLists.txt
